--- a/job/Cargo.toml
+++ b/job/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2024"
 [dependencies]
 elyze = "1.5.5"
 thiserror = { workspace = true }
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+rand = "0.9.2"
