--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ratatui = "0.29.0"
 protocol = { path = "../protocol" }
 clap = { version = "4.5.44", features = ["derive"] }
 thiserror = "2.0.14"
