--- a/job/Cargo.toml
+++ b/job/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 rand = "0.9.2"
+clap = { version = "4.5.45", features = ["derive"] }
