--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,4 @@ thiserror = "2.0.14"
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+chrono = { version = "0.4", features = ["clock"] }
